Every other song was adding to queue

--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -191,12 +191,12 @@
       <script src="js/checkForPlaylist.js"></script>
       <script src="js/upcomingSongs.js"></script>
       <script src="js/song.js"></script>
-      <script>
+      <!--<script>
      var songLinkClick = function() {
               $("#songLinkClick" + i).attr("alt", "Votes = " + i);
               i++;
           }
-      </script>
+      </script>-->
 
   </body>
 </html>
