--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -14,189 +14,192 @@
 
   </head>
 
-  <body>
-    <div style="background-color: gray; position:fixed !important; width: 100% !important; opacity: 1;" id="searchBoxContainer"><center><h2 style="margin-bottom: 0px; height: 55px !important; font-size: 200% !important; font-weight: bold; color: white" id="infoHeader"></h2></center>
-      <div id="searchBox"><input class="col-xs-3 form-control" name="filename" placeholder="Song or Artist..." id="filename" type="text"></div>
+<body>
+    <div style="background-color: gray; position:fixed !important; width: 100% !important; opacity: 1;" id="searchBoxContainer">
+        <center><h2 style="margin-bottom: 0px; height: 55px !important; font-size: 200% !important; font-weight: bold; color: white" id="infoHeader"></h2></center>
+        <div id="searchBox"><input class="col-xs-3 form-control" name="filename" placeholder="Song or Artist..." id="filename" type="text"></div>
     </div>
 
-     <center><div style="padding-top: 150px !important;" id="results"></div></center>
-       <div class="container">
+    <center><div style="padding-top: 150px !important;" id="results"></div></center>
+    <div class="container">
 
-      <div id="loggedin">
-        <div id="user-profile">
+        <div id="loggedin">
+            <div id="user-profile">
+            </div>
+            <div id="oauth">
+            </div>
+            <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button><br />
+            <!--<div id="searchBox"><input class="col-xs-3 form-control" name="filename" id="filename" type="text"><button class="btn btn-default" id="searchSongs">Search for a Song</button></div>
+
+              <button class="btn btn-default" id="setDefaultPlaylist">Set Playlist to "Snapster"</button>
+            <button class="btn btn-default" id="test">TEST</button><br/>-->
+            <!--<button class="btn btn-default" id="button">Test Feature</button><br />-->
+
         </div>
-        <div id="oauth">
-        </div>
-        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button><br/>
-                <!--<div id="searchBox"><input class="col-xs-3 form-control" name="filename" id="filename" type="text"><button class="btn btn-default" id="searchSongs">Search for a Song</button></div>
-
-          <button class="btn btn-default" id="setDefaultPlaylist">Set Playlist to "Snapster"</button>
-        <button class="btn btn-default" id="test">TEST</button><br/>-->
-          <!--<button class="btn btn-default" id="button">Test Feature</button><br />-->
-
-      </div>
     </div>
     <div class="container">
-  </div>
-<!--  <script id="results-template" type="text/x-handlebars-template">
-      {{#each tracks.items}}
-      <a href="{{data.tracks.items[0].name}}">TEST</a>
-      <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
-      {{/each}}
-  </script> -->
+    </div>
+    <!--  <script id="results-template" type="text/x-handlebars-template">
+          {{#each tracks.items}}
+          <a href="{{data.tracks.items[0].name}}">TEST</a>
+          <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+          {{/each}}
+      </script> -->
 
 
 
 
     <script id="oauth-template" type="text/x-handlebars-template">
-      <h2>oAuth info</h2>
-      <dl class="dl-horizontal">
-        <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-        <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}></dd>
-      </dl>
+        <h2>oAuth info</h2>
+        <dl class="dl-horizontal">
+            <dt>Access token</dt>
+            <dd class="text-overflow">{{access_token}}</dd>
+            <dt>Refresh token</dt>
+            <dd class="text-overflow">{{refresh_token}}></dd>
+        </dl>
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-      <script id="user-profile-template" type="text/x-handlebars-template">
-          <div class="media">
-              <div class="pull-left">
-                  <!--<img class="media-object" width="150" src="{{images.0.url}}" />-->
-              </div>
-          </div>
-          <div class="media-body">
-              <dl class="dl-horizontal">
-                  <dt style="display:none;">Id</dt>
-                  <dd style="color:white;" id="userID2">{{id}}</dd>
-                  <dt>Name</dt>
-                  <br />
-                  <dd>{{display_name}}</dd>
-                  <dt>Email</dt>
-                  <br />
-                  <dd>{{email}}</dd>
-                  <dt>Spotify URI</dt>
-                  <dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-                  <dt>Link</dt>
-                  <dd><a href="{{href}}">{{href}}</a></dd>
-                  <dt>Profile Image</dt>
-                  <dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-                  <dt>Country</dt>
-                  <dd>{{country}}</dd>
-              </dl>
-          </div>
+    <script id="user-profile-template" type="text/x-handlebars-template">
+        <div class="media">
+            <div class="pull-left">
+                <!--<img class="media-object" width="150" src="{{images.0.url}}" />-->
+            </div>
+        </div>
+        <div class="media-body">
+            <dl class="dl-horizontal">
+                <dt style="display:none;">Id</dt>
+                <dd style="color:white;" id="userID2">{{id}}</dd>
+                <dt>Name</dt>
+                <br />
+                <dd>{{display_name}}</dd>
+                <dt>Email</dt>
+                <br />
+                <dd>{{email}}</dd>
+                <dt>Spotify URI</dt>
+                <dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+                <dt>Link</dt>
+                <dd><a href="{{href}}">{{href}}</a></dd>
+                <dt>Profile Image</dt>
+                <dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+                <dt>Country</dt>
+                <dd>{{country}}</dd>
+            </dl>
+        </div>
 
 
-      </script>
+    </script>
 
-      <footer id="footer">
-          <div id="login">
-              <!--<h1><em>Snapster</em></h1>-->
-              <a href="/login" id="spotify" class="btn btn-primary">Log in with Spotify</a>
-          </div>
-            </footer>
-      <div id="footer2">
-        <script id="user-profile-template" type="text/x-handlebars-template">  <p style="color:white;" id="userID">{{id}}</p></script>
+    <footer id="footer">
+        <div id="login">
+            <!--<h1><em>Snapster</em></h1>-->
+            <a href="/login" id="spotify" class="btn btn-primary">Log in with Spotify</a>
+        </div>
+    </footer>
+    <center><div id="footer2"></div></center>
+    <script id="user-profile-template" type="text/x-handlebars-template">
+        <p style="color:white;" id="userID">{{id}}</p>
+    </script>
 
-          <!--<script src="songs.js"></script>-->
+    <!--<script src="songs.js"></script>-->
+    <script>
+        var access_token;
+        (function () {
 
-      </div>
-      <script>
-    var access_token;
-      (function() {
+            /**
+             * Obtains parameters from the hash of the URL
+             * @return Object
+             */
+            function getHashParams() {
+                var hashParams = {};
+                var e, r = /([^&;=]+)=?([^&;]*)/g,
+                    q = window.location.hash.substring(1);
+                while (e = r.exec(q)) {
+                    hashParams[e[1]] = decodeURIComponent(e[2]);
+                }
+                return hashParams;
+            }
 
-        /**
-         * Obtains parameters from the hash of the URL
-         * @return Object
-         */
-        function getHashParams() {
-          var hashParams = {};
-          var e, r = /([^&;=]+)=?([^&;]*)/g,
-              q = window.location.hash.substring(1);
-          while ( e = r.exec(q)) {
-             hashParams[e[1]] = decodeURIComponent(e[2]);
-          }
-          return hashParams;
-        }
+            var userProfileSource = document.getElementById('user-profile-template').innerHTML,
+                userProfileTemplate = Handlebars.compile(userProfileSource),
+                userProfilePlaceholder = document.getElementById('user-profile');
 
-        var userProfileSource = document.getElementById('user-profile-template').innerHTML,
-            userProfileTemplate = Handlebars.compile(userProfileSource),
-            userProfilePlaceholder = document.getElementById('user-profile');
+            var oauthSource = document.getElementById('oauth-template').innerHTML,
+                oauthTemplate = Handlebars.compile(oauthSource),
+                oauthPlaceholder = document.getElementById('oauth');
 
-        var oauthSource = document.getElementById('oauth-template').innerHTML,
-            oauthTemplate = Handlebars.compile(oauthSource),
-            oauthPlaceholder = document.getElementById('oauth');
-
-        var params = getHashParams();
+            var params = getHashParams();
 
             access_token = params.access_token,
             refresh_token = params.refresh_token,
             error = params.error;
 
-        if (error) {
-          alert('There was an error during the authentication');
-        } else {
-          if (access_token) {
-            // render oauth info
-            oauthPlaceholder.innerHTML = oauthTemplate({
-              access_token: access_token,
-              refresh_token: refresh_token
-            });
+            if (error) {
+                alert('There was an error during the authentication');
+            } else {
+                if (access_token) {
+                    // render oauth info
+                    oauthPlaceholder.innerHTML = oauthTemplate({
+                        access_token: access_token,
+                        refresh_token: refresh_token
+                    });
 
-            $.ajax({
-                url: 'https://api.spotify.com/v1/me',
-                headers: {
-                  'Authorization': 'Bearer ' + access_token
-                },
-                success: function(response) {
-                  userProfilePlaceholder.innerHTML = userProfileTemplate(response);
+                    $.ajax({
+                        url: 'https://api.spotify.com/v1/me',
+                        headers: {
+                            'Authorization': 'Bearer ' + access_token
+                        },
+                        success: function (response) {
+                            userProfilePlaceholder.innerHTML = userProfileTemplate(response);
 
-                  $('#login').hide();
-                  $('#loggedin').show();
-                  $('#footer').hide();
-                  $('#footer2').show();
-                  $('#searchBox').show();
-                  $('#infoHeader').show();
+                            $('#login').hide();
+                            $('#loggedin').show();
+                            $('#footer').hide();
+                            $('#footer2').show();
+                            $('#searchBox').show();
+                            $('#infoHeader').show();
 
+                        }
+                    });
+                } else {
+                    // render initial screen
+                    $('#login').show();
+                    $('#loggedin').hide();
+                    $('#footer2').hide();
+                    $('#footer').show();
+                    $('#searchBox').hide();
+                    $('#infoHeader').hide();
                 }
-            });
-          } else {
-              // render initial screen
-              $('#login').show();
-              $('#loggedin').hide();
-              $('#footer2').hide();
-              $('#footer').show();
-              $('#searchBox').hide();
-              $('#infoHeader').hide();
-          }
 
-          document.getElementById('obtain-new-token').addEventListener('click', function() {
-            $.ajax({
-              url: '/refresh_token',
-              data: {
-                'refresh_token': refresh_token
-              }
-            }).done(function(data) {
-              access_token = data.access_token;
-              oauthPlaceholder.innerHTML = oauthTemplate({
-                access_token: access_token,
-                refresh_token: refresh_token
-              });
-            });
-          }, false);
-        }
-      })();
+                document.getElementById('obtain-new-token').addEventListener('click', function () {
+                    $.ajax({
+                        url: '/refresh_token',
+                        data: {
+                            'refresh_token': refresh_token
+                        }
+                    }).done(function (data) {
+                        access_token = data.access_token;
+                        oauthPlaceholder.innerHTML = oauthTemplate({
+                            access_token: access_token,
+                            refresh_token: refresh_token
+                        });
+                    });
+                }, false);
+            }
+        })();
 
 
     </script>
-      
-      <script src="js/checkForPlaylist.js"></script>
-      <script src="js/upcomingSongs.js"></script>
-      <script src="js/song.js"></script>
-      <!--<script>
-     var songLinkClick = function() {
-              $("#songLinkClick" + i).attr("alt", "Votes = " + i);
-              i++;
-          }
-      </script>-->
 
-  </body>
+    <script src="js/checkForPlaylist.js"></script>
+    <script src="js/upcomingSongs.js"></script>
+    <script src="js/song.js"></script>
+    <!--<script>
+    var songLinkClick = function() {
+             $("#songLinkClick" + i).attr("alt", "Votes = " + i);
+             i++;
+         }
+     </script>-->
+
+</body>
 </html>
