--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html id="html">
+<html>
   <head>
     <title>Snapster</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -168,7 +168,6 @@
                             $('#searchBox').show();
                             $('#infoHeader').show();
                             $('input#partyID').hide();
-                            $('#html').css('background-image', 'none');
 
                         }
                     });
