--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -102,7 +102,7 @@
     <footer id="footer">
         <div id="login">
             <!--<h1><em>Snapster</em></h1>-->
-            <a href="/login" id="spotify" class="btn btn-primary">Host a Party!</a>
+            <a href="/login" id="spotify" class="btn btn-primary">Host a Party</a>
         </div>
     </footer>
     <center><div id="footer2"></div></center>
