--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/style.css">
-      
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -46,7 +46,7 @@
           <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
           {{/each}}
       </script> -->
-    
+
     <div id="hideThis">
         <center>
             <form>
@@ -54,7 +54,7 @@
             </form>
 
                     <!--<h1><em>Snapster</em></h1>-->
-                    <a href="/login" style="margin-top: 15px; width: 46% !important; margin-left: -22% !important; height: 100px !important; font-size: 400% !important; margin-top: 100px !important;" id="spotify" class="btn btn-primary">Host a Party!</a>
+                    <center><a href="/login" id="spotify" class="btn btn-primary">Host a Party!</a></center>
         </center>
     </div>
     <script>
@@ -106,7 +106,7 @@
 
     </script>
 
-  
+
     <center><div id="footer2"></div></center>
     <script id="user-profile-template" type="text/x-handlebars-template">
         <p style="color:white;" id="userID">{{id}}</p>
@@ -209,7 +209,7 @@
     <script src="js/checkForPlaylist.js"></script>
     <script src="js/upcomingSongs.js"></script>
     <script src="js/song.js"></script>
-  
+
 
 </body>
 </html>
