--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div style="background-color: gray; position:fixed !important; width: 100% !important; opacity: 1;" id="searchBoxContainer">
-        <center><h2 style="margin-bottom: 0px; height: 55px !important; font-size: 200% !important; font-weight: bold; color: white" id="infoHeader"></h2></center>
+        <center><h2 style="margin-bottom: 0px; height: 55px !important; font-size: 200% !important; font-weight: bold; color: #ececec;" id="infoHeader"></h2></center>
         <div id="searchBox"><input class="col-xs-3 form-control" name="filename" placeholder="Song or Artist..." id="filename" type="text"></div>
     </div>
 
