--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -170,8 +170,6 @@
                             $('#searchBox').show();
                             $('#infoHeader').show();
                             $('input#partyID').hide();
-
-
                         }
                     });
                 } else {
@@ -209,7 +207,7 @@
     <script src="js/checkForPlaylist.js"></script>
     <script src="js/upcomingSongs.js"></script>
     <script src="js/song.js"></script>
-
+    <script src="js/voteUp.js"></script>
 
 </body>
 </html>
