--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -172,6 +172,10 @@
                             $('#searchBox').show();
                             $('#infoHeader').show();
                             $('input#partyID').hide();
+                            if (localStorage.getItem("lastFM") === null || localStorage.getItem("lastFM") === "null") {
+                                var userPrompt = prompt("Enter Your LastFM Username");
+                                localStorage.setItem("lastFM", userPrompt);
+                            }
                         }
                     });
                 } else {
