--- a/authorization_code/public/index.html
+++ b/authorization_code/public/index.html
@@ -208,8 +208,7 @@
 
 
     </script>
-
-    <script src="js/checkForPlaylist.js"></script>
+  <!--  <script src="js/checkForPlaylist.js"></script> -->
     <script src="js/song.js"></script>
     <script src="js/upcomingSongs.js"></script>
 
